--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
             <artifactId>gson</artifactId>
             <version>2.9.0</version>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core-java11</artifactId>
+            <version>6.1.6</version>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>net.java.dev.jna</groupId>-->
 <!--            <artifactId>jna</artifactId>-->
 <!--            <version>5.10.0</version>-->
@@ -49,13 +54,13 @@
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
-            <version>2.1</version>
+            <version>2.2</version>
         </dependency>
 
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf-intellij-themes</artifactId>
-            <version>2.1</version>
+            <version>2.2</version>
         </dependency>
         <dependency>
             <groupId>io.github.biezhi</groupId>
