--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>github.fileengine</groupId>
     <artifactId>File-Engine</artifactId>
-    <version>1.0</version>
+    <version>3.5</version>
     <repositories>
         <repository>
             <id>mulesoft</id>
@@ -76,7 +76,12 @@
             <artifactId>flatlaf</artifactId>
             <version>2.2</version>
         </dependency>
-
+<!--    mvn install:install-file -Dfile=libs/forms_rt.jar -DgroupId=com.intellij -DartifactId=forms_rt -Dversion=1.0 -Dpackaging=jar    -->
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>forms_rt</artifactId>
+            <version>1.0</version>
+        </dependency>
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf-intellij-themes</artifactId>
